<resources>
    <string name="app_name">BikeTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main_bike_tracker">MainBikeTrackerActivity</string>
    <string name="departure_trip">Add Trip Departure Details</string>
    <string name="arrival_trip">Add Trip Arrival Details</string>
    <string name="departure_details">Enter your Departure Details</string>
    <string name="dateSliderTitle">Selected date</string>
	<string name="Welcome">Welcome to BikeTracker</string>
	<string name="content">Information</string>
	<string name="AddBike">Add Bike</string>
	<string name="FillUp">Fill Up</string>
	<string name="Expenses">Expenses</string>
	<string name="Trip">Trip</string>
	<string name="Reminders">Reminders</string>
	<string name="AddReminder">Add Reminder</string>
	<string name="Statistics">Statistics</string>
	<string name="Chart">Chart</string>
	<string name="Latitude">Latitude</string>
	<string name="RouteMap">Route Map</string>
	<string name="Settings">Settings</string>
	<string name="MyInfo">My Info</string>
	<string name="addnewbikeinfo">ADD New Bike Information</string>
	<string name="addpurchasesdetails">ADD Bike Purchase Detail</string>
	<string name="addsalesdetails">ADD Bike Sales Details</string>
	<string name="datehint">Select Date Here</string>
	<string name="pricehint">Enter Price Here</string>
	<string name="notehint">Enter Additional Information note here</string>
	 <string name="viewdetails">View Your Bike Details</string>
	<string name="Name">Enter Bike Name</string>
	<string name="Registration">Registration Number</string>
	<string name="Manufacturer">Manufacturer</string>
	<string name="Vehicle_Type">Vehicle Type</string>
	<string name="Bike_Color">Bike Color</string>
	<string name="Bike_Model">Bike Model</string>
	<string name="YearOfManufacture">Year Of Manufacture</string>
	<string name="RegistrationDate">Registration Date</string>
	<string name="ChassisNumber">Chassis No/VIN</string>
	<string name="EngineNumber">Engine Number</string>
	<string name="FuelType">Fuel Type</string>
	<string name="CC">CC</string>
	<string name="RegistrationUpto">Registration Upto</string>
	<string name="FCupto">FC Upto</string>
	<string name="PurchaseDate">Purchase Date</string>
	<string name="PurchasePrice">Purchase Price</string>
	<string name="PurchaseNotes">Purchase Notes</string>
	<string name="SellingDate">Selling Date</string>
	<string name="SellingPrice">Selling Price</string>
	<string name="SellingNotes">Selling Notes</string>
	<string name="DateTime">Date-Time</string>
	<string name="FuelVolume">Fuel Volume</string>
	<string name="FullTank">Full Tank</string>
	<string name="ReserveTank">Reserve Tank</string>
	<string name="PricePerLitre">Price/Litre</string>
	<string name="OdoReading">Odometer Reading</string>
	<string name="TotalCost">Total Cost</string>
	<string name="Vehicle">Vehicle</string>
	<string name="FuelCategory">Fuel Category</string>
	<string name="FuelBrand">Fuel Brand</string>
	<string name="FuellingStation">Fuelling Station</string>
	<string name="PaymentType">Payment Type</string>
	<string name="FuelAdditive">Fuel Additive</string>
	<string name="Location">Location</string>
	<string name="Type">Type</string>
	<string name="Purpose">Purpose</string>
	<string name="Client">Client</string>
	<string name="Business">Business</string>
	<string name="Personal">Personal</string>
	<string name="RemindMeAbout">Remind Me About</string>
	<string name="Overall">Overall</string>
	<string name="BestFuelEco">Best Fuel Economy</string>
	<string name="AverageFuelEco">Best  Milage/  Liter</string>
	<string name="WorstFuelEco">Best Fuel Efficiency</string>
	<string name="DistanceTPD">Distance travelled/day</string>
	<string name="DistanceTPF">Distance travelled/fill up</string>
	<string name="Costperday">Cost/Day</string>
	<string name="Costperfillup">Cost/Fillup</string>
	<string name="TotalExpense">Total Expense</string>
	<string name="Notes">Notes</string>
	<string name="MileageChart">Mileage Chart</string>
	<string name="FuelChart">FuelChart</string>
	<string name="ExpenseChart">ExpenseChart</string>
	<string name="Weekly">Weekly</string>
	<string name="Monthly">Monthly</string>
	<string name="tillnow">Till Now</string>
	<string name="FuelUnit">Fuel Unit</string>
	<string name="DistanceUnit">Distance Unit</string>
	<string name="ExportTo"> Enable Auto Answer Call</string>
	<string name="payment_prompt">Choose mode of payment</string>
	<string name="enginenumber">Enter Engine Number</string>
	<string name="Chassisnumber">Enter Bike Chassis Number</string>
	<string name="datetime">Enter date and time </string>
	<string name="fuelvolume">Enter Fuel Volume</string>
	<string name="priceliter">Enter Price/litre</string>
	<string name="_cc">Enter CC</string>
	<string name="_fcupto">Enter FC upto</string>
	<string name="odometerreading">Enter Odometer Readings</string>
	<string name="totalcost">Fuel Total Cost</string>
	<string name="fuelstation">Enter Fuelling Station</string>
	<string name="fuelAdditive">Enter Fuel Additive</string>
	<string name="fillnotes">Notes</string>
	<string name="expencesdatetime">Select Date And Time</string>
	<string name="expencesodometer">Enter Expences Odometer</string>
	<string name="expencestotalcost">Enter Total Cost</string>
	<string name="location">Enter Location</string>
	<string name="expencesnotes">Enter Expences Note</string>
	<string name="departurepurpose">Enter Departure Purpose</string>
	<string name="departureclient">Enter Client Details</string>
	<string name="departuredatetime">Select Departure Date/Time</string>
	<string name="Departureodometer">Enter Departure OdoMeter Rading</string>
	<string name="departurelacation">Enter Departure Location</string>
	<string name="departurenote">Enter Departure Note Here</string>
	<string name="arrivalodometer">Enter Arrival Odometer Readings</string>
	<string name="arrivedlocationname">Enter Arrived Location Name</string>
	<string name="arrivalnotes"> Arrive Notes Here </string>
	<string name="Authenticate"> Your Reminder About What </string>
	<string name="reminderdatetime">Select DateTime Here</string>
	<string name="reminder">Reading For Reminder</string>
	<string name="remindernotes">Reminder Notes</string>
	<string-array name="payment_arrays">
	    
	    <item>Cash</item>
	    <item>Credit Card</item>
	    <item>Debit Card</item>
	    
	</string-array>
	<string name="vehicle_type_prompt">Choose vehicle type</string>
	<string-array name="vehicle_arrays">

	    <item>Scooter-Gearless</item>
	    <item>Scooter</item>
	    <item>Motorcycles</item>
	    
	</string-array>
	<string name="expense_prompt">Type of expense</string>
	<string-array name="expense_type_array">
	    
	    <item>Tax</item>
	    <item>Insurance</item>
	    <item>General Service</item>
	    <item>Wash</item>
	    <item>Oil Change</item>
	    <item>Tyre</item>
	    <item>Brake</item>
	    
	</string-array>
	<string name="fuel_category_prompt">Choose fuel category</string>
	<string-array name="fuel_cat_array">
	    
	    <item>Petrol</item>
	    <item>Diesel</item>
	    
	</string-array>
	<string name="fuel_type_prompt">Choose fuel type</string>
	<string-array name="fuel_type_array">
	    
	    <item>Normal</item>
	    <item>Premium</item>
	    
	</string-array>
	<string name="fuel_brand_prompt">Choose fuel brand</string>
	<string-array name="fuel_brand_array">
	    
	    <item >Indian Oil</item>
	    <item >Bharat Petroleum</item>
	    <item >Hindustan Petroleum</item>
	    <item >IBP</item>
	    <item >Reliance</item>
	    <item >Essar</item>
	    <item >Shell</item>
	    <item >ONGC</item>
	    
	</string-array>
	<string name="fuel_unit_prompt">Select Fuel unit</string>
	<string-array name="fuel_unit_array">
	    
	    <item >Lit</item>
	    <item >Gal</item>
	    
	</string-array>
	<string name="distance_unit_prompt">Select Distance unit</string>
	<string-array name="distance_unit_array">
	    
	    <item >KiM</item>
	    <item >Mil</item>
	    
	</string-array>
	<string name="export_prompt">Export to</string>
	<string-array name="export_array">
	    
	    <item >SD Card</item>
	    <item >Excel</item>
	    <item >Mail</item>
	    <item >Notepad</item>
	    
	</string-array>
	<string name="EnterName">Enter Name</string>
	<string name="EnterReg">Enter Registration Number</string>
	<string name="EnterManu">Enter Manufacturer</string>
	<string name="EnterCol">Enter color</string>
	<string name="EnterModel">Enter model</string>
	<string name="EnterYOM">Enter Year of Manufacture</string>
	<string name="EnterRegDate">Enter Registration date</string>
	<string name="NewBike">Add Bike</string>
	<string name="FillUpType">Fill-up Type</string>
	<string name="Select">Select</string>
	<string-array name="FillUp_Spinner">
	    
	    <item >Reserve Tank</item>
	    <item >Partial fill-up</item>
	    
	</string-array>
	<string name="datetimenote">Select Date And Time</string>
	<string name="customnote">Enter your Note Here</string>
	<string name="aboutremainderhint">Remainder About What</string>
	<string name="aboutapp">Bike Milage Tracker is a smart phone solution for our bike daily maintanace , using this application we can maintain our licence details ,bike insurance details,roadtrip details  Reminders for bike mainatance,checking the milage and view it in charts,updatting our current location to google latitude to track where you where on a perticular date finding the route map between you travelling source and destination and we can see all of our personal details related to our bike.
 Using this appliaction we can handle the phone calls while riding a bike through bluetooth headsets,auto answering,avoide the unwanted phine numbers during driving. If you like this please share this application on your friend,dont forget to rate the app

feedback and sujessions are welcome to improvise the application
	    </string>
	<string name="extras">Select Options for Your Extras</string>
	<string name="addextras">Add Your Bike Extra Details</string>
	<string name="viewxtras">View Your Bike Extra Details</string>
	<string name="updateextras">Update Your Bike Extra Details</string>
	<string name="deleteextras">Delete Your Bike Extra Details</string>
	<string name="edit_reminder_title">Task Reminder - Edit</string>
    <string name="no_reminders">No Reminders Yet</string>
    <string name="menu_insert">Add Reminder</string>
    <string name="menu_delete">Delete Reminder</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="confirm">Save</string>
    <string name="edit_reminder">Edit Reminder</string>
    <string name="date">Reminder Date</string>
    <string name="time">Reminder Time</string>
    <string name="task_saved_message">Task has been saved</string>
    <string name="notify_new_task_message">Bike Tracker Notification!</string>
    <string name="notify_new_task_title">Task Reminder!</string>
    <string name="pref_category_task_defaults_key">task_default_category</string>
	<string name="pref_category_task_defaults_title">Task Title Default</string>
	<string name="pref_task_title_key">default_reminder_title</string>
	<string name="pref_task_title_dialog_title">Default Reminder Title</string>
	<string name="pref_task_title_message">The default title for a reminder.</string>
	<string name="pref_task_title_summary">Default title for reminders.</string>
	<string name="pref_task_title_title">Default Reminder Title</string>
    <string name="pref_category_datetime_key">date_time_default_category</string>
    <string name="pref_category_datetime_title">Date Time Defaults</string>
    <string name="pref_default_time_from_now_key">time_from_now_default</string>
    <string name="pref_default_time_from_now_dialog_title">Time From Now</string>
    <string name="pref_default_time_from_now_message">The default time from now that a new reminder should be set to.</string>
</resources>