<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/tv"
        style="@style/TitleBar"
        android:text="@string/addsalesdetails" >
    </TextView>

    <RelativeLayout
        
        android:id="@+id/reative1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="125dp"
        android:background="@drawable/sale_details"
        android:gravity="center" >

        <TextView
            android:id="@+id/Sold_date"
            style="@style/TextViewStyle"
            android:text="@string/SellingDate" />

        <EditText
            android:id="@+id/sale_date_et"
            style="@style/EditTextStyle"
            android:layout_toRightOf="@id/Sold_date"
            android:hint="@string/datehint" />

        <TextView
            android:id="@+id/sold_price"
            style="@style/TextViewStyle"
            android:layout_below="@id/Sold_date"
            android:text="@string/SellingPrice" />

        <EditText
            android:id="@+id/sale_price_et"
            style="@style/EditTextStyle"
            android:layout_below="@id/sale_date_et"
            android:layout_toRightOf="@id/sold_price"
            android:hint="@string/pricehint" />

        <TextView
            android:id="@+id/sold_notes"
            style="@style/TextViewStyle"
            android:layout_below="@id/sold_price"
            android:layout_marginTop="30dp"
            android:text="@string/SellingNotes" />

        <EditText
            android:id="@+id/sale_notes_et"
            style="@style/EdittextNoteStyle"
            android:layout_below="@id/sale_price_et"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/sold_notes"
            android:hint="@string/notehint" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reative1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp" >

        <Button
            android:id="@+id/_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reative1"
            android:background="@drawable/ok" />

        <Button
            android:id="@+id/_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/cancel" />
      
    </RelativeLayout>

    <TextView
        android:id="@+id/name"
        style="@style/TextViewStyle"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv"
        android:layout_marginTop="52dp"
        android:text="Select Your Bike" />

    <Spinner
        android:id="@+id/vehicle_spinner"
        style="@style/SpinnerStyle"
        android:layout_width="200dp"
        android:layout_below="@+id/tv"
        android:layout_marginTop="55dp"
        android:layout_toRightOf="@+id/name"
        android:prompt="@string/vehicle_type_prompt" />

</RelativeLayout>